fix(stepper): text alignment

--- a/packages/react/src/stepper/src/styles/index.module.scss
+++ b/packages/react/src/stepper/src/styles/index.module.scss
@@ -86,7 +86,7 @@
       display: flex;
       flex-direction: column;
       gap: theme.get-spacing("xs");
-      align-items: center;
+      text-align: center;
     }
   }
 
